--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3"
   }
